--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   app:
     build: .
-    container_name: chatgpt-demo
-    image: chatgpt-demo
+    container_name: ciandt-chatgpt
+    image: ciandt-chatgpt
     ports:
       - 3000:3000
     volumes:
